fixed the alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -252,7 +252,7 @@ ul{
 .timeline-content{
 
 	background-image: image-url("timeline_dot.png");
-	background-position: 0px 34px;
+	background-position: 0px 30px;
 	background-repeat: no-repeat;
 	list-style: none outside none;
 	margin-left: -10px;
@@ -260,7 +260,7 @@ ul{
 	padding-left: 25px;
 
 	h3{
-		font-size: 1.6em;
+		font-size: 1.4em;
 		font-weight: 300;
 		text-align: left;	
 		color: #eb6d56;	
